<resources>
    <string name="app_name">Repairchain</string>
    <string name="description">Description:</string>
    <string name="upload">Upload image</string>
    <string name="noImage">No image added</string>
    <string name="tv_time">Creation Time:</string>
    <string name="submit">Submit</string>
    <string name="new_report">Create Report</string>
    <string name="wallet_balance">Get Balance</string>
    <string name="wallet_transaction">Send Transaction</string>
    <string name="welcome">Welcome to the Repairchain app </string>
    <string name="btn_add_report_text">Add report</string>
    <string name="btn_reports_text">Reports</string>
    <string name="take_photo">Take picture</string>
    <string name="done">Done</string>
    <string name="choose_image">Choose Image</string>
    <string name="image_added">Image added</string>
    <string name="title_activity_reports_map">Map</string>
    <string name="report">Report</string>
    <string name="confirmations">Confirmations:</string>
    <string name="confirm">Confirm</string>
    <string name="fix">Fix</string>
    <string name="image">Image:</string>
    <string name="descriptionHint">Type Description Here</string>
</resources>
